Part 2 done and demo

--- a/LAB2PART1.X/nbproject/Makefile-genesis.properties
+++ b/LAB2PART1.X/nbproject/Makefile-genesis.properties
@@ -1,9 +1,9 @@
 #
-#Wed Mar 02 19:00:23 MST 2016
-default.com-microchip-mplab-nbide-toolchainXC32-XC32LanguageToolchain.md5=7c6f696c4b3352f7d84fe1d22087e24a
-default.languagetoolchain.dir=/Applications/microchip/xc32/v1.40/bin
-configurations-xml=fd9fb1371650c46353a27abf0e060875
-com-microchip-mplab-nbide-embedded-makeproject-MakeProject.md5=86cd07c925781d185dcd90a0ee6d03fc
+#Fri Mar 04 11:41:48 MST 2016
+default.com-microchip-mplab-nbide-toolchainXC32-XC32LanguageToolchain.md5=a29d9df60dd9a7849837c8f5ca17a004
+default.languagetoolchain.dir=C\:\\Program Files (x86)\\Microchip\\xc32\\v1.40\\bin
+configurations-xml=b6a18d8b3fef260c24d995e47373d7ae
+com-microchip-mplab-nbide-embedded-makeproject-MakeProject.md5=47805b5596804b87cda41e61096929be
 default.languagetoolchain.version=1.40
-host.platform=mac
+host.platform=windows
 conf.ids=default
