--- a/LAB2PART2.X/nbproject/Makefile-genesis.properties
+++ b/LAB2PART2.X/nbproject/Makefile-genesis.properties
@@ -1,9 +1,9 @@
 #
-#Thu Mar 03 17:10:03 MST 2016
-default.com-microchip-mplab-nbide-toolchainXC32-XC32LanguageToolchain.md5=7c6f696c4b3352f7d84fe1d22087e24a
-default.languagetoolchain.dir=/Applications/microchip/xc32/v1.40/bin
-configurations-xml=e2104d0834dec6c73612de1519c5fee8
-com-microchip-mplab-nbide-embedded-makeproject-MakeProject.md5=86cd07c925781d185dcd90a0ee6d03fc
+#Fri Mar 04 12:10:20 MST 2016
+default.com-microchip-mplab-nbide-toolchainXC32-XC32LanguageToolchain.md5=a29d9df60dd9a7849837c8f5ca17a004
+default.languagetoolchain.dir=C\:\\Program Files (x86)\\Microchip\\xc32\\v1.40\\bin
+configurations-xml=d954143dc2ea735dd25f4cc8d5ac52ec
+com-microchip-mplab-nbide-embedded-makeproject-MakeProject.md5=47805b5596804b87cda41e61096929be
 default.languagetoolchain.version=1.40
-host.platform=mac
+host.platform=windows
 conf.ids=default
